0.13.0
- Make extension build more reproducible with sorted sources (bmwiedemann)
- Fix _ubjson_decode_value case statement fallthrough and use correct check
  to not re-raise existing decoder DecoderException

0.12.0
- Relax floating point type test case (for 32-bit targets)
- Added Python 3.7 to classifiers list

0.11.0
- Add default parameter to encoder, allowing for unsupported types to be
  encoded.
- Add object_hook parameter to decoder, to e.g. allow decoding of custom types
  (which were encoded with the help of default parameter).
- Treat object_pairs_hook the same in pure Python mode as with extension

0.10.0
- Support No-Op type (decoder only)
- Allow for object keys to be interned, saving memory if repeated (PY3 only)
- Use PyUnicode_FromStringAndSize instead of PyUnicode_DecodeUTF8 (decoder)
- Open file for writing, not appending (to/from json utility)
- Used more compact json encoding (to/from json utility)
- Enable object key interning (to/from json utility)

0.9.0
- C extension re-implemented (without Cython) with major speedup (7-10x)
- object_pairs_hook now works like built-in json module
- Minor pure version improvements
- Windows build compatibility

0.8.5
- Added Python 3.5 to classifiers list
- Fix index in argv (command line utility)

0.8.4
- License information update
- Allow for lack of stdin/stdout/stdout buffer access
- Allow for extenion building to be skipped via env. var

0.8.3
- Initial public release